--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -57,44 +57,46 @@
 
     <Button
         android:id="@+id/Register_Start"
-        android:layout_width="match_parent"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/primary_button"
+        android:fontFamily="@font/roboto"
         android:shadowColor="#31FFFFFF"
         android:shadowRadius="0"
         android:text="Register"
+
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
-        style="?android:attr/borderlessButtonStyle"
-
         app:layout_constraintBottom_toTopOf="@+id/Login_Start"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/Login_Start"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/secondary_button"
+        android:fontFamily="@font/roboto"
         android:text="Login"
         android:textColor="@color/colorPrimary"
+
         android:textSize="18sp"
         android:textStyle="bold"
-        style="?android:attr/borderlessButtonStyle"
-
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="@+id/Register_Start"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/Register_Start"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Register_Start" />
 
     <TextView
