--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -132,6 +132,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/primary_button"
+        android:fontFamily="@font/roboto"
         android:text="Continue"
         android:textColor="#ffffff"
         android:textSize="18sp"
