--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -60,9 +60,7 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
         android:background="@drawable/primary_button"
         android:fontFamily="@font/roboto"
         android:shadowColor="#31FFFFFF"
@@ -81,11 +79,9 @@
     <Button
         android:id="@+id/Login_Start"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
         android:background="@drawable/secondary_button"
         android:fontFamily="@font/roboto"
         android:text="Login"
