--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="android:windowBackground">@color/colorBackgroundColor</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="buttonStyle">?android:attr/borderlessButtonStyle</item>
     </style>
 
     <style name="AppTheme.CustomTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
