--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -53,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="50dp"
         android:background="#FDFDFD"
@@ -64,11 +65,14 @@
 
     <ImageButton
         android:id="@+id/send"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="54dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="-2dp"
         android:backgroundTint="@color/colorAccent"
-        app:srcCompat="@drawable/send" />
+        android:rotation="180"
+        app:srcCompat="@drawable/abc_vector_test" />
 
 </RelativeLayout>
