--- a/app/src/main/res/layout/create_activity.xml
+++ b/app/src/main/res/layout/create_activity.xml
@@ -69,8 +69,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Activity Name"
-        />
+        android:fontFamily="@font/roboto"
+        android:text="Activity Name" />
 
     <EditText
         android:id="@+id/new_activity_name"
