--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -57,6 +57,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FDFDFD"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:inputType="textMultiLine"
         android:maxLines="10"
         android:minHeight="51dp"
