--- a/app/src/main/res/layout/gridfrienditem.xml
+++ b/app/src/main/res/layout/gridfrienditem.xml
@@ -30,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="@font/roboto"
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textSize="10sp"
