--- a/app/src/main/res/layout/useritem.xml
+++ b/app/src/main/res/layout/useritem.xml
@@ -45,6 +45,7 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="22dp"
                 android:layout_toEndOf="@+id/profilepic"
+                android:fontFamily="@font/roboto"
                 android:text="TextView"
                 android:textSize="16sp" />
         </RelativeLayout>
