--- a/app/src/main/res/layout/activityitem.xml
+++ b/app/src/main/res/layout/activityitem.xml
@@ -1,115 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="420dp"
-    android:layout_margin="5dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="8dp"
     cardview:cardCornerRadius="4dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:paddingBottom="40dp">
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TIME:"
+            android:textSize="8sp"
+            cardview:layout_constraintStart_toStartOf="@+id/act_date"
+            cardview:layout_constraintTop_toBottomOf="@+id/act_date" />
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="DATE:"
+            android:textSize="8sp"
+            cardview:layout_constraintStart_toStartOf="@+id/act_location"
+            cardview:layout_constraintTop_toBottomOf="@+id/act_location" />
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="LOCATION:"
+            android:textSize="8sp"
+            cardview:layout_constraintStart_toStartOf="@+id/Name_register"
+            cardview:layout_constraintTop_toBottomOf="@+id/Name_register" />
 
         <ImageView
             android:id="@+id/act_picture"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_width="386dp"
+            android:layout_height="109dp"
             android:background="#2d2d2d"
-            android:scaleType="centerCrop"></ImageView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="152dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:background="@color/lightBlue"></ImageView>
-
-                <TextView
-                    android:id="@+id/Name_register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="7dp"
-                    android:gravity="center"
-                    android:text="Name"
-                    android:textSize="20dp"
-                    ></TextView>
-
-                <TextView
-                    android:id="@+id/act_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="7dp"
-                    android:gravity="center"
-                    android:text="Location"
-                    android:textSize="17dp"
-                    ></TextView>
-
-                <TextView
-                    android:id="@+id/act_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="7dp"
-                    android:gravity="center"
-                    android:text="Date"
-                    android:textSize="17dp"
-                    ></TextView>
-
-                <TextView
-                    android:id="@+id/act_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="7dp"
-                    android:gravity="center"
-                    android:text="Time"
-                    android:textSize="17dp"
-                    ></TextView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/activity_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Activity Name"
-                    android:textSize="25dp"
-                    ></TextView>
-
-                <TextView
-                    android:id="@+id/act_desc"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
-                    android:text="Description"
-                    android:textSize="18dp"
-                    >
-                </TextView>
+            android:scaleType="centerCrop"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp"></ImageView>
 
 
-            </LinearLayout>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:text="CREATED BY:"
+            android:textSize="8sp"
+            cardview:layout_constraintStart_toStartOf="@+id/profile_image"
+            cardview:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="68dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            cardview:layout_constraintStart_toStartOf="parent"
+            cardview:layout_constraintTop_toTopOf="@+id/act_picture"></ImageView>
+
+        <TextView
+            android:id="@+id/Name_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:text="Name"
+            android:textSize="14sp"
+            cardview:layout_constraintStart_toStartOf="@+id/textView13"
+            cardview:layout_constraintTop_toBottomOf="@+id/textView13"></TextView>
+
+        <TextView
+            android:id="@+id/act_location"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Location"
+            android:textSize="14sp"
+            cardview:layout_constraintStart_toStartOf="@+id/textView17"
+            cardview:layout_constraintTop_toBottomOf="@+id/textView17"></TextView>
+
+        <TextView
+            android:id="@+id/act_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Date"
+            android:textSize="14sp"
+            cardview:layout_constraintStart_toStartOf="@+id/textView16"
+            cardview:layout_constraintTop_toBottomOf="@+id/textView16"></TextView>
+
+
+        <TextView
+            android:id="@+id/act_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Time"
+            android:textSize="14sp"
+            cardview:layout_constraintStart_toStartOf="@+id/textView15"
+            cardview:layout_constraintTop_toBottomOf="@+id/textView15"></TextView>
+
+        <TextView
+            android:id="@+id/activity_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="Activity Name"
+            android:textSize="25dp"
+            cardview:layout_constraintStart_toEndOf="@+id/profile_image"
+            cardview:layout_constraintTop_toBottomOf="@+id/act_picture"></TextView>
+
+        <TextView
+            android:id="@+id/act_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Description"
+            android:textSize="14sp"
+            cardview:layout_constraintEnd_toEndOf="@+id/act_picture"
+            cardview:layout_constraintStart_toStartOf="@+id/activity_name"
+            cardview:layout_constraintTop_toBottomOf="@+id/activity_name"></TextView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
