--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="buttonStyle">?android:attr/borderlessButtonStyle</item>
+        <item name="android:textColor">#222222</item>
     </style>
 
     <style name="AppTheme.CustomTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
