--- a/app/src/main/res/layout/interestitem.xml
+++ b/app/src/main/res/layout/interestitem.xml
@@ -3,7 +3,7 @@
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="170dp"
     android:layout_height="200dp"
-    android:layout_margin="5dp"
+    android:layout_columnWeight="1"
     cardview:cardCornerRadius="4dp">
 
     <LinearLayout
@@ -25,8 +25,7 @@
             android:gravity="center"
             android:text="Interest"
             android:textColor="#2d2d2d"
-            android:textSize="15dp"
-            ></TextView>
+            android:textSize="15dp"></TextView>
 
     </LinearLayout>
 
