--- a/app/src/main/res/layout/useritem.xml
+++ b/app/src/main/res/layout/useritem.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -40,14 +39,24 @@
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="10dp"
                 android:layout_toEndOf="@+id/profilepic"
                 android:fontFamily="@font/roboto"
                 android:text="TextView"
                 android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/message"
+                android:layout_width="match_parent"
+                android:layout_height="18dp"
+                android:layout_below="@+id/username"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentBottom="false"
+                android:layout_marginStart="89dp"
+                android:layout_marginTop="5dp"
+                android:text="TextView" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
