--- a/app/src/main/res/layout/fragment_notifications_friends_list_item.xml
+++ b/app/src/main/res/layout/fragment_notifications_friends_list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,6 +11,7 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:background="#00FFFFFF"
         app:civ_border_color="#00FFFFFF"
@@ -24,10 +24,11 @@
         android:id="@+id/notification_friend_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/notification_friend_image"
         app:layout_constraintStart_toEndOf="@+id/notification_friend_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/notification_friend_image" />
 
     <TextView
         android:id="@+id/notification_friend_duration"
@@ -37,5 +38,5 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/notification_friend_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/notification_friend_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
