--- a/app/src/main/res/layout/fragment_notifications_friends.xml
+++ b/app/src/main/res/layout/fragment_notifications_friends.xml
@@ -8,11 +8,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_notifications_friends"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.076" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
