Added Splash Screen activity_splash_screen.xml Made FriendsFragment code shorter by implementing methods that is broad (e.g. addComma, removeComma) Made the display picture of fragment_notifications_friends_list_item.xml smaller

--- a/app/src/main/res/layout/fragment_notifications_friends_list_item.xml
+++ b/app/src/main/res/layout/fragment_notifications_friends_list_item.xml
@@ -7,7 +7,10 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -39,8 +42,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/notification_friend_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -58,8 +61,6 @@
                 android:id="@+id/divider2"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
