--- a/app/src/main/res/layout/fragment_notifications_friends.xml
+++ b/app/src/main/res/layout/fragment_notifications_friends.xml
@@ -17,4 +17,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.076" />
 
+    <TextView
+        android:id="@+id/nonotifications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rv_notifications_friends" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
